--- a/src/scss/modules/_page.scss
+++ b/src/scss/modules/_page.scss
@@ -25,6 +25,8 @@
   }
 
   & a {
-    margin: 0 1rem;
+    @include media-queries(atMedium) {
+      margin: 0 1rem;
+    }
   }
 }
